--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" sizes="32x32" href="/wm-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>wen mewn</title>
+    <title>
+      wen mewn - a bitcoin and cryptocurrency price and analytics tracker
+    </title>
   </head>
   <body>
     <div id="root"></div>
